# copier-UvScaffolding

./: README.md  copier.yml  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/release_impl/: action.yml
.github/workflows/: CICD.yml  CICD_impl.yml
extensions/: context.py  slugify.py  to_python_list.py
template/: .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  SECURITY.md  __.gitignore.fragment  __README.fragment.md  __pyproject.fragment.toml  {{_copier_conf.answers_file}}
template/.github/ISSUE_TEMPLATE/: bug_report.md
template/.github/actions/release_impl/: action.yml
template/.github/workflows/: CICD.yml  CICD_impl.yml  codeql.yml
template/__licenses/: __postprocess.py
template/__post_generation_instructions/: __postprocess.py  post_generation_instructions.fragment.html
template/__readme/: __README.fragment.md  __postprocess.py
template/__tools/: Cleanup.py  PostprocessReadme.py  UvInit.py
template/src/: AutoGitSemVer.yaml
template/src/{{ python_package_name }}/: UvScaffolding_sample_file.py  ____init__.fragment.py
template/tests/: UvScaffolding_sample_file_test.py
tests/: All_EndToEndTest.py  GenerateTemplates.py  Licenses_EndToEndTest.py  Minisign_EndToEndTest.py  PythonVersions_EndToEndTest.py  Readme_EndToEndTest.py  SampleFiles_EndToEndTest.py  TestHelpers.py  Update_EndToEndTest.py
tests/__snapshots__/: All_EndToEndTest.ambr
